# ki-protokollierung

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  setup.ps1  setup.sh
.github/workflows/: docker-publish.yml
app/backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.gpu  agenda_detection.py  assignment_suggestions.py  export_protocol.py  extract_tops.py  main.py  persistence.py  pyproject.toml  speaker_recognition.py  summarize.py  telemetry.py  transcribe.py  transcript_splitter.py
app/backend/tests/: conftest.py  test_agenda_detection.py  test_assignment_suggestions.py  test_export_protocol.py  test_extract_tops.py  test_main.py  test_persistence.py  test_speaker_api.py  test_speaker_recognition.py  test_summarize.py  test_telemetry.py  test_transcript_splitter.py
app/frontend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json
app/frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  types.ts
app/frontend/src/components/: AssignmentStep.test.tsx  AssignmentStep.tsx  AudioPlayer.tsx  LLMSettingsPanel.test.tsx  LLMSettingsPanel.tsx  Layout.tsx  ProcessingStep.tsx  SessionHistory.test.tsx  SessionHistory.tsx  SpeakerNameEditor.test.tsx  SpeakerNameEditor.tsx  SpeakerProfileManager.test.tsx  (+6 more)
docs/agents/: domain.md
k8s/: README.md  deploy.sh  kustomization.yaml
k8s/backend/: configmap.yaml  deployment.yaml  pvc.yaml
k8s/frontend/: deployment.yaml  ingress.example.yaml
scripts/: README.md
scripts/research/: README.md
(+1 files in other folders)
