[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuiv-backend"
version = "0.1.0"
description = "Backend API for Meeting Minutes Generator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "openai>=1.0.0",
    "python-docx>=1.1.2",
    "reportlab>=4.2.0",
    "torch>=2.7.0,<2.8.0",
    "torchaudio>=2.7.0,<2.8.0",
    "whisperx>=3.7.0",
    "pdfplumber>=0.10.0",
    # Pin huggingface_hub to <1.0 until whisperx/pyannote update to use 'token' instead of 'use_auth_token'
    "huggingface_hub>=0.24.0,<1.0",    
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = [
    "assignment_suggestions",
    "export_protocol",
    "extract_tops",
    "main",
    "persistence",
    "speaker_recognition",
    "summarize",
    "telemetry",
    "transcribe",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
